syntax = "proto3";

package podvminfo;

option go_package = "github.com/confidential-containers/cloud-api-adaptor/proto/podvminfo";

service PodVMInfo {
        rpc GetInfo(GetInfoRequest) returns (GetInfoResponse) {}
}

message GetInfoRequest {
    string PodName = 1;
    string PodNamespace = 2;

    bool Wait = 3;
}

message GetInfoResponse {
    string VMID = 1;
}
